force-app/main/default/objects/PDRI__Release_Result__c/PDRI__Release_Result__c.object-meta.xml
<CustomObject>
    <label>Release Result</label>
    <nameField>
        <displayFormat>RR-{0000}</displayFormat>
        <label>Release Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>