force-app/main/default/objects/PDRI__Release_Result__c/fields/PDRI__Deactivate_All_Events__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deactivate_All_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivate All Events</label>
    <type>Checkbox</type>
</CustomField>