force-app/main/default/objects/PDRI__Release_Result__c/fields/PDRI__Release_Status__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Release_Status__c</fullName>
    <label>Release Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>