force-app/main/default/objects/PDRI__Release_Result__c/fields/PDRI__Scheduled_Deployment_Prodly_Id__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Scheduled_Deployment_Prodly_Id__c</fullName>
    <label>Scheduled Deployment Prodly Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>