force-app/main/default/objects/PDRI__Release_Result__c/fields/PDRI__Started_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Started_Date_Time__c</fullName>
    <label>Started Date Time</label>
    <type>DateTime</type>
</CustomField>