force-app/main/default/objects/PDRI__Release_Result__c/fields/PDRI__Target__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Target__c</fullName>
    <label>Target</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>