force-app/main/default/objects/PDRI__Release_Result__c/fields/PDRI__Target_Name__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Target_Name__c</fullName>
    <label>Target Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>