force-app/main/default/objects/PDRI__Release_Result__c/fields/PDRI__Target_Type__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Target_Type__c</fullName>
    <label>Target Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>