force-app/main/default/objects/PDRI__Release_Result__c/fields/PDRI__Type__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Validation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>